# DeltaW_Krel

./: .gitignore  CITATION.cff  MANIFEST.sha256.json  Makefile  README.md  SMOKE_OUTPUTS_VALIDATION_REPORT.md  environment.yml  pyproject.toml  requirements.txt
config/: config_preregistration.json
docs/: CERTIFICATE_LEMMAS.md  CERTIFIED_WITNESS_RESULT.md  CLAIM_EVIDENCE_MATRIX.md  CONVENTIONS.md  INSTALL_AND_TEST_REPORT.md  MAXIMIZE_REPOSITORY_FOR_SUBMISSION.md  PROTOCOL_POSITIONING_AND_DATA_INVENTORY.md  PUBLIC_DATA_INVENTORY.md  RELATION_TO_PRIOR_WORK.md  REPRODUCIBILITY_NOTES.md  SCIENTIFIC_CONTEXT.md  SDP_VALIDATION_STATUS.md  SUBMISSION_CHECKLIST.md  ULTIMATE_VISION_ROADMAP.md
notebooks/: projectors_definitions.ipynb  validation_switch_ideal.ipynb
results/: preregistration_lock.json  reproducibility_report.md
scripts/: freeze_preregistration.py  full_realistic_tomography.py  full_tomography_simulation.py  generate_manifest.py  generate_reproducibility_report.py  ingest_external_cao2023_sdi.py  micro_tomography_simulation.py  monte_carlo_control_supplement.py  realistic_tomography_pipeline.py  run_certified_bounds.py  run_certified_witness_analysis.py  run_certified_witness_landscape.py  run_finite_count_analysis.py  run_sdp_validation.py  run_switch_dephasing_scan.py  run_switch_robustness_landscape.py  validate_manifest.py
site/: app.js  index.html  styles.css
tests/: conftest.py  test_certified_bounds.py  test_certified_witness.py  test_external_cao2023.py  test_finite_count.py  test_full_tomography_simulation.py  test_monte_carlo_control_supplement.py  (+13 more)
(+19 files in other folders)
