[project]
name = "deltaw-krel-reproducibility"
version = "0.0.0"
description = "Reproducibility scaffold for the ΔW/K_rel process-matrix test program"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Daloze Didier" }]
dependencies = [
  "numpy>=1.26",
  "scipy>=1.11",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "cvxpy>=1.4",
  "clarabel>=0.7",
  "nbformat",
  "jupyterlab",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "tqdm",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", ".", "scripts"]
addopts = "-q"

[tool.ruff]
line-length = 100

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
